# firefly_desktop

./: .gitignore  README.md  dev.md  dev_todo.md  firefly_tech_doc.md  requirements.txt  tree.txt
backend/: README.md  awake_word_scheme.md  main.py  pyproject.toml  requirements.txt  tem.ipynb  test.ipynb  test_agent.txt  test_chat.py  test_deepseek_usage.py  test_logic_only.py  test_mcp_output.txt  test_sql.py
backend/api/: api.md  app.py  openapi.json
backend/api/agent/: agent_router.py
backend/api/data_manager/: sql_router.py
backend/api/settings/: setting_router.py
backend/api/stt/: stt_router.py
backend/api/tools/: tools_router.py
backend/api/tts/: tts_router.py
backend/service/: agent.py  deepseek.py  llm_factory.py  llm_register.py  llm_service.py  test.ipynb
backend/storage/sql/: __init__.py  conversation_manager.py  database_manager.py  preference_manager.py  sql_init.py  tool_usage_manager.py  user_manager.py
backend/tools/: __init__.py  config_manager.py  launch_app.py  monitor_system_use.py  registry_tools.py  stdio_mcp.py  utils.py
backend/tools/Tool_implementation/: launch_app.md  launch_software.py
backend/voice/: convert_tts_model.py  stt.ipynb  stt.py  tts.py  tts_service.py
data/: config copy.yaml  config.yaml  mcp.json
frontend/assets/css/: main.css  setting.txt
frontend/assets/js/: chat.js  model.js  settings.js
frontend/firefly_frontend/firefly_frontend/: Resource.h  firefly_frontend.aps  firefly_frontend.cpp  firefly_frontend.rc  main.cpp  (+2 more)
history/: session_20260205_223920.json  session_20260205_224031.json
(+35 files in other folders)
