[project]
name = "backend"
version = "0.1.0"
description = "firefly desktop agent project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "faster-whisper>=1.2.1",
    "fastmcp>=2.14.5",
    "fuzzywuzzy>=0.18.0",
    "langchain>=1.2.7",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "openai>=2.16.0",
    "openai-whisper>=20250625",
    "pathlib>=1.0.1",
    "pillow==12.0.0",
    "pyaudio>=0.2.14",
    "pypinyin>=0.55.0",
    "python-levenshtein>=0.27.3",
    "ruamel-yaml>=0.19.1",
    "setuptools>=82.0.0",
    "sounddevice>=0.5.5",
    "speechrecognition>=3.14.5",
    "sympy==1.13.1",
    "torch==2.5.1+cu121",
    "torchaudio==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
